fix for breadcrumb going too high

--- a/ploneorg/theme/theme/sass/main.scss
+++ b/ploneorg/theme/theme/sass/main.scss
@@ -127,3 +127,5 @@ input.searchButton {
 section.sec-community ul {
   padding-left: 1.2em;
 }
+
+.plone-breadcrumb {margin-top: 0px;}
